--- a/templates/home.html
+++ b/templates/home.html
@@ -146,6 +146,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/assets/js/jquery.history.js"></script>
+    <script src="/assets/js/spin.min.js"></script>
     <script src="/assets/js/gopher.js"></script>
     <script src="/assets/js/site.js"></script>
   </body>
