cleanup, deal with odd data parsing

--- a/assets/css/gophper.css
+++ b/assets/css/gophper.css
@@ -9,3 +9,9 @@
 .spinny {
 	padding-left: 40px;
 }
+/*#gopher a {
+	-webkit-transition: all 0.35s linear;
+}
+#gopher a:hover {
+	background-color: #220000;
+}*/
