--- a/templates/home.html
+++ b/templates/home.html
@@ -143,10 +143,13 @@
 	  </div><!-- /row -->
     </div> <!-- /container -->
 
-    <div class="navbar navbar-fixed-bottom">
+	<div class="navbar navbar-fixed-bottom">
       <div class="navbar-inner">
         <div class="container">
-		Footy
+		  <p>Gophper-PHP &copy;
+			2012 <a href="http://muffinlabs.com/">Colin
+			  Mitchell</a>. Content delivered via Gophper belongs to its
+			original authors. Enjoy!</p>
 		</div>
 	  </div>
 	</div>
