--- a/templates/home.html
+++ b/templates/home.html
@@ -47,23 +47,21 @@
       </div>
     </div>
 
-    <div class="container-fluid">
-	  <div class="row-fluid">
+    <div class="container">
+	  <div class="row">
 
-		  <div id="spinner">
-			<img src="/assets/img/spinner.gif" />
-		  </div>
+		<div id="spinner">
+		  <img src="/assets/img/spinner.gif" />
+		</div>
 
 		<div class="span4"></div>
 		<div class="span8">
-
-		  <?php if ( ! array_key_exists('data', $this->data) ) { ?>
-		  <div id="intro">
-			<h1>Gophper -- A Gopher Proxy for Modern Times</h1>
+		  <div id="intro" <?php if ( array_key_exists('data', $this->data) ) {?>class="hide"<?php } ?>>
+			<h1>Gophper: A Gopher Proxy for Modern Times</h1>
 			<p>
 			  The <a href="http://en.wikipedia.org/wiki/Gopher_(protocol)">Gopher</a>
 			  protocol was published in 1991. It was popular for some
-			  time, but died off in the late 1990s, mostly because of some
+			  time, but died off in the late 1990s, partially because of some
 			  poor decisions by the University of Minnesota (which owned
 			  the licensing rights), and also because HTTP and HTML was
 			  undoubtedly a better system for many things.
@@ -95,18 +93,7 @@
 				<li>Coming Soon: Stats, etc</li>
 			  </ul>
 			</p>
-		  </div>
-		  <?php } ?>
 
-		  <div id="breadcrumb"></div>
-
-		  <div id="gopher">
-			<?php
-			   if ( array_key_exists('data', $this->data) ) {
-   		         echo $this->data['data'];
-			   }
-			   else {
-			?>
 			<div class="as-html">
 			  <h3>Let's Do This!</h3>
 			  <p>If you know where you would like to go, enter the URL
@@ -134,8 +121,15 @@
 				<li><a href="/quix.us">quix.us</a></li>
 			  </ul>
 			</div> <!-- /as-html -->
+		  </div>
 
-			<?php } ?>
+		  <div id="breadcrumb"></div>
+		  <div id="gopher">
+			<?php
+			   if ( array_key_exists('data', $this->data) ) {
+   		         echo $this->data['data'];
+			   }
+			?>
 		  </div> <!-- /gopher -->
 
 		</div> <!-- /span10 -->
