--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-
-<?php 
-if ( ! array_key_exists('class', $this->data) ) {
+<?php if ( ! array_key_exists('class', $this->data) ) {
 	$this->data["class"] = "";
-}
-?>
+} ?>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -106,25 +103,25 @@ if ( ! array_key_exists('class', $this->data) ) {
 				below, or you can always enter a URL into the box at the top
 				of the page.</p>
 			  <form class="well gopher-uri">
-				<fieldset>
-				  <label>Gopher URI to visit:</label>
-				  <input type="text" name="uri" class="span3" placeholder="URL">
-				</fieldset>
-				<button type="submit" class="btn">go!</button>
+					<fieldset>
+					  <label>Gopher URI to visit:</label>
+					  <input type="text" name="uri" class="span3" placeholder="URL">
+					</fieldset>
+					<button type="submit" class="btn">go!</button>
 			  </form>
 
 			  <h3>Or, you can try one of these popular Gopher servers</h3>
 			  <ul>
-				<li><a href="/gopher.meulie.net">gopher.meulie.net</a></li>
-				<li><a href="/sdf.org">sdf.org</a></li>
-				<li><a href="/moo.ca">moo.ca</a></li>
-				<li><a href="/gopher.floodgap.com">gopher.floodgap.com</a></li>
-				<li><a href="/gopher.std.com">gopher.std.com</a></li>
-				<li><a href="/gopher.quux.org">gopher.quux.org</a></li>
-				<li><a href="/nemesis.cs.berkeley.edu">nemesis.cs.berkeley.edu</a></li>
-				<li><a href="/telefisk.org">telefisk.org</a></li>
-				<li><a href="/gopher.viste-family.net">gopher.viste-family.net</a></li>
-				<li><a href="/quix.us">quix.us</a></li>
+					<li><a href="/gopher.meulie.net">gopher.meulie.net</a></li>
+					<li><a href="/sdf.org">sdf.org</a></li>
+					<li><a href="/moo.ca">moo.ca</a></li>
+					<li><a href="/gopher.floodgap.com">gopher.floodgap.com</a></li>
+					<li><a href="/gopher.std.com">gopher.std.com</a></li>
+					<li><a href="/gopher.quux.org">gopher.quux.org</a></li>
+					<li><a href="/nemesis.cs.berkeley.edu">nemesis.cs.berkeley.edu</a></li>
+					<li><a href="/telefisk.org">telefisk.org</a></li>
+					<li><a href="/gopher.viste-family.net">gopher.viste-family.net</a></li>
+					<li><a href="/quix.us">quix.us</a></li>
 			  </ul>
 			</div> <!-- /as-html -->
 		  </div>
@@ -137,16 +134,15 @@ if ( ! array_key_exists('class', $this->data) ) {
 	  </div><!-- /row -->
     </div> <!-- /container -->
 
-	<div class="navbar navbar-fixed-bottom">
-      <div class="navbar-inner">
-        <div class="container">
-		  <p>Gophper-PHP &copy;
-			2012 <a href="http://muffinlabs.com/">Colin
-			  Mitchell</a>. Content delivered via Gophper belongs to its
-			original authors. Enjoy!</p>
+		<div class="navbar navbar-fixed-bottom">
+	    <div class="navbar-inner">
+	      <div class="container">
+		  		<p>Gophper-PHP &copy;	2012 <a href="http://muffinlabs.com/">Colin
+			  		Mitchell</a>. Content delivered via Gophper belongs to its
+						original authors. Enjoy!</p>
+				</div>
+		  </div>
 		</div>
-	  </div>
-	</div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/assets/js/jquery.colorbox-min.js"></script>
