--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,11 @@
 // class default for gopher intro
 if ( ! array_key_exists('class', $this->data) ) {
 	$this->data["class"] = "";
-} ?>
+}
+if ( ! array_key_exists('file', $this->data) ) {
+	$this->data["file"] = "intro.html";
+}
+ ?>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -15,9 +19,6 @@ if ( ! array_key_exists('class', $this->data) ) {
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/colorbox.css" rel="stylesheet">
     <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
     </style>
     <link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/assets/css/gophper.css" rel="stylesheet">
@@ -62,7 +63,7 @@ if ( ! array_key_exists('class', $this->data) ) {
 				<div class="span4"></div>
 				<div class="span8">
 				  <div id="intro" class="<?php echo $this->data["class"] ?>">
-						<?php include_once("intro.html"); ?>
+						<?php include_once($this->data["file"]); ?>
 				  </div>
 
 				  <div id="breadcrumb"></div>
