--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<?php 
+<?php
 // class default for gopher intro
 if ( ! array_key_exists('class', $this->data) ) {
 	$this->data["class"] = "";
@@ -16,14 +16,13 @@ if ( ! array_key_exists('file', $this->data) ) {
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link href="/assets/css/assets.css" rel="stylesheet">
+<!--
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/css/colorbox.css" rel="stylesheet">
-    <style>
-    </style>
     <link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/assets/css/colorbox.css" rel="stylesheet">
     <link href="/assets/css/gophper.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+-->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -84,9 +83,12 @@ if ( ! array_key_exists('file', $this->data) ) {
 		</div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/assets/js/jquery.colorbox-min.js"></script>
     <script src="/assets/js/jquery.history.js"></script>
+    <script src="/assets/js/compressed.js"></script>
+<!--
+    <script src="/assets/js/jquery.colorbox-min.js"></script>
     <script src="/assets/js/gopher.js"></script>
     <script src="/assets/js/site.js"></script>
+-->
   </body>
 </html>
