--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
   died off in the late 1990s, partially because of some poor decisions
   by the University of Minnesota (which owned the licensing rights,
   and <a href="http://www.nic.funet.fi/pub/vms/networking/gopher/gopher-software-licensing-policy.ancient">decided
-  to charge for use</a>), and also because HTTP and HTML was
+  to charge for use</a>), and of course also because HTTP and HTML was
   undoubtedly a better system for what became the World Wide Web.
 </p>
 <p>
