--- a/templates/home.html
+++ b/templates/home.html
@@ -83,11 +83,9 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/assets/js/jquery.history.js"></script>
-    <script src="/assets/js/compressed.js"></script>
-    <!--
-        <script src="/assets/js/jquery.colorbox-min.js"></script>
+<!--    <script src="/assets/js/compressed.js"></script>-->
+        <script src="/assets/js/jquery.colorbox.js"></script>
         <script src="/assets/js/gopher.js"></script>
         <script src="/assets/js/site.js"></script>
-        -->
   </body>
 </html>
