--- a/templates/home.html
+++ b/templates/home.html
@@ -15,14 +15,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-
+<!---
     <link href="/assets/css/assets.css" rel="stylesheet">
-    <!--
+--->
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
         <link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet">
         <link href="/assets/css/colorbox.css" rel="stylesheet">
         <link href="/assets/css/gophper.css" rel="stylesheet">
-        -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -30,8 +29,7 @@
   </head>
 
   <body>
-
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">Gophper</a>
@@ -42,50 +40,47 @@
               <li><a href="https://github.com/muffinista/gophper-proxy">Code</a></li>
             </ul>
           </div><!--/.nav-collapse -->
-
-	  <form class="gopher-uri form-inline">
-	    <input type="text" name="uri" class="span4" style="margin-top:5px" placeholder="URL" />
-	    <button type="submit" class="btn">go</button>
-	  </form>
+          
+	        <form class="gopher-uri form-inline">
+	          <input type="text" name="uri" class="span4" style="margin-top:5px" placeholder="URL" />
+	          <button type="submit" class="btn">go</button>
+	        </form>
         </div>
       </div>
     </div>
 
     <div class="container">
-      <div class="row">
+	    <div id="spinner">
+	      <img src="/assets/img/spinner.gif" />
+	    </div>
 
-	<div id="spinner">
-	  <img src="/assets/img/spinner.gif" />
-	</div>
+	    <div class="span4"></div>
+	    <div class="span8">
+	      <div id="intro" class="<?php echo $this->data["class"] ?>">
+	        <?php include_once($this->data["file"]); ?>
+	      </div>
 
-	<div class="span4"></div>
-	<div class="span8">
-	  <div id="intro" class="<?php echo $this->data["class"] ?>">
-	    <?php include_once($this->data["file"]); ?>
-	  </div>
-
-	  <div id="breadcrumb"></div>
-	  <div id="gopher"></div> <!-- /gopher -->
-	</div> <!-- /span8 -->
-
-      </div><!-- /row -->
+	      <div id="breadcrumb"></div>
+	      <div id="gopher"></div> <!-- /gopher -->
+	    </div> <!-- /span8 -->
     </div> <!-- /container -->
 
-    <div class="navbar navbar-fixed-bottom">
+
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
       <div class="navbar-inner">
-	<div class="container">
-	  <p>Gophper-PHP &copy;	2012 <a href="http://muffinlabs.com/">Colin
-	      Mitchell</a>. Content delivered via Gophper belongs to its
-	    original authors. Enjoy!</p>
-	</div>
+	      <div class="container">
+	        <p class="muted credit">Gophper-PHP &copy; 2013 <a href="http://muffinlabs.com/">Colin
+	            Mitchell</a>. Content delivered via Gophper belongs to its
+	          original authors. Enjoy!</p>
+	      </div>
       </div>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/assets/js/jquery.history.js"></script>
-<!--    <script src="/assets/js/compressed.js"></script>-->
-        <script src="/assets/js/jquery.colorbox.js"></script>
-        <script src="/assets/js/gopher.js"></script>
-        <script src="/assets/js/site.js"></script>
+    <!--    <script src="/assets/js/compressed.js"></script>-->
+    <script src="/assets/js/jquery.colorbox.js"></script>
+    <script src="/assets/js/gopher.js"></script>
+    <script src="/assets/js/site.js"></script>
   </body>
 </html>
