--- a/assets/css/gophper.css
+++ b/assets/css/gophper.css
@@ -41,6 +41,10 @@ body {
 .navbar-fixed-bottom .container {
   padding-top: 5px;
 }
+.navbar-fixed-bottom .navbar-inner {
+    min-height: 30px;
+}
+
 
 form.gopher-uri {
     margin: 0 0 5px;
